Ticket #25723: Use List.of instead of Arrays.asList.